--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@nativescript/theme": "^3.1.0"
   },
   "devDependencies": {
+    "@nativescript/ios": "8.9.2",
     "@nativescript/types": "~8.9.0",
     "@nativescript/webpack": "~5.0.0",
     "typescript": "~5.4.0"
